--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,15 @@
 
+body {
+    margin: 20px;
+    padding: 5px;
+
+}
+
+.jumbotron {
+    font-size: 42px;
+    text-align: center;
+}
+
+h2 {
+    padding: 10px;
+}
